Added the Deus in Adjutorium and first antiphon for Vespers of the Dead.

--- a/Vespers/vespers_of_the_dead.tex
+++ b/Vespers/vespers_of_the_dead.tex
@@ -1,7 +1,24 @@
-\documentclass{office-sheet}
+\documentclass{../office-sheet}
 
 \begin{document}
 
-\chapter*{Office of Vespers}
+\chapter*{Vespers of the Dead}
+
+{\color{red}\textit{All make the Sign of the Cross as the Officiant says (All continue together with the entire ``Gloria Patri'' after the response): }}
+
+\gresetinitiallines{1}
+\gregorioscore{deus_in_adjutorium}
+{\color{red}\Vbar.} \textit{O God, come to my assistance.}
+{\color{red}\Rbar.} \textit{O Lord, make haste to help me. Glory be to the Father, and to the Son, and to the Holy Spirit, as it was in the beginning, is now, and ever shall be, world without end. Amen. Alleluia.}
+
+%%
+
+\vspace{1cm}
+
+\textit{I will please the Lord in the land of the living.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_placebo_domino}
+
+\section*{Psalm 115}
 
 \end{document}
