Completion of the Office of the Dead: Added chant notation for the requiescant, added proper collects for Vespers, and added horizontal bars between Psalms in Vespers.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -1158,7 +1158,7 @@
 \end{latinenglishsection}
 
 \begin{center}
-{\color{red}\textit{The appropriate Collect is said from below, followed by the rest on the bottom of page 24.}}
+{\color{red}\textit{The appropriate Collect is said from below, followed by the rest on page 24.}}
 \end{center}
 
 \vfill\pagebreak
@@ -1415,7 +1415,7 @@
 \subsection*{\color{red}For all the Faithful Departed}
 \begin{latinenglishsection}
 \latinenglish{
-	Fidelium, Deus, \'{o}mnium C\'{o}nditor et Red\'{e}mptor, anim\'{a}bus famul\'{o}rum famular\'{u}mque tu\'{a}rum remissi\'{o}nem cunct\'{o}rum tr\'{i}bue peccat\'{o}rum: ut indulg\'{e}ntiam, quam semper optav\'{e}runt, piis supplicati\'{o}nibus consequ\'{a}ntur. Qui vivis et regnas cum Deo Patre, in unit\'{a}te Sp\'{i}ritus Sancti Deus, per \'{o}mnia s\'{\ae}cula s\'{\ae}cula s\ae cul\'{o}rum.
+	Fidelium, Deus, \'{o}mnium C\'{o}nditor et Red\'{e}mptor, anim\'{a}bus famul\'{o}rum famular\'{u}mque tu\'{a}rum\\ remissi\'{o}nem cunct\'{o}rum tr\'{i}bue peccat\'{o}rum: ut\\ indulg\'{e}ntiam, quam semper optav\'{e}runt, piis\\ supplicati\'{o}nibus consequ\'{a}ntur. Qui vivis et regnas cum Deo Patre, in unit\'{a}te Sp\'{i}ritus Sancti Deus, per \'{o}mnia s\'{\ae}cula s\'{\ae}cula s\ae cul\'{o}rum.
 	
 	{\color{red}\Rbar.} Amen.
 }{
@@ -1436,19 +1436,16 @@
 	{\color{red}\Vbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine.
 	
 	{\color{red}\Rbar.} Et lux perp\'{e}tua l\'{u}ceat eis.
-	
-	{\color{red}\Vbar.} Requi\'{e}scant in pace.
-	
-	{\color{red}\Rbar.} Amen.
 }{
 	{\color{red}\Vbar.} Eternal rest grant unto them, O Lord.
 	
 	{\color{red}\Rbar.} And let perpetual light shine upon them.
-	
-	{\color{red}\Vbar.} May they rest in peace.
-	
-	{\color{red}\Rbar.} Amen.
 }
 \end{latinenglishsection}
+
+\gresetinitiallines{0}
+\gregorioscore{requiescant_in_pace}
+\vspace{0.25cm}
+{\color{red}\Vbar.} May they rest in peace. {\color{red}\Rbar.} Amen.
 
 \end{document}
