--- a/Vespers/vespers_of_the_dead.tex
+++ b/Vespers/vespers_of_the_dead.tex
@@ -4,7 +4,7 @@
 
 \chapter*{Vespers of the Dead}
 
-{\color{red}\textit{All make the Sign of the Cross as the Officiant says (All continue together with the entire ``Gloria Patri'' after the response): }}
+{\color{red}\textit{All make the Sign of the Cross as the Officiant says the following (and all continue together with the entire ``Gloria Patri'' after the response): }}
 
 \gresetinitiallines{1}
 \gregorioscore{deus_in_adjutorium}
@@ -13,12 +13,730 @@
 
 %%
 
-\vspace{1cm}
+\vspace{0.2cm}
+\hrule
+\vspace{0.2cm}
+
+\vspace{0.4cm}
 
 \textit{I will please the Lord in the land of the living.}
 \gresetinitiallines{1}
 \gregorioscore{antiphon_placebo_domino}
 
-\section*{Psalm 115}
+\section*{Psalm 114}
+
+\gresetinitiallines{0}
+\gregorioscore{intonation_psalm_114}
+
+\begin{latinenglishsection}
+\latinenglish{
+	2. Quia inclinávit aurem \textbf{su}am \textbf{mi}hi:~* et in diébus meis in\textit{vo}\textbf{cá}bo.
+
+	3. Circumdedérunt me do\textbf{ló}res \textbf{mor}tis:~* et perícula inférni in\textit{ve}\textbf{né}runt me.
+
+	4. Tribulatiónem et do\textbf{ló}rem in\textbf{vé}ni:~* et nomen Dómini in\textit{vo}\textbf{cá}vi.
+	
+	5. O Dómine, líbera ánimam meam:~{\color{red}\GreDagger} miséricors Dómi\textbf{nus}, et \textbf{jus}tus,~* et Deus noster mi\textit{se}\textbf{ré}tur.
+	
+	6. Custódiens \textbf{pár}vulos \textbf{Dó}\textbf{mi}nus:~* humiliátus sum, et li\textit{be}\textbf{rá}vit me.
+	
+	7. Convértere, ánima mea, in \textbf{ré}quiem \textbf{tu}am:~* quia Dóminus benefé\textit{cit} \textbf{ti}bi.
+	
+	8. Quia erípuit ánimam meam de morte:~{\color{red}\GreDagger} óculos \textbf{me}os a \textbf{lá}\textbf{cri}mis,~* pedes meos \textit{a} \textbf{lap}su.
+	
+	9. Pla\textbf{cé}bo \textbf{Dó}\textbf{mi}no~* in regióne \textit{vi}\textbf{vó}rum.
+	
+	10. Requiem æternam dona \textbf{e}is, \textbf{Domi}ne~* Et lux perpetua lucea\textit{at} \textbf{e}is.
+}{
+	1.  I have loved, because the Lord will hear the voice of my prayer.
+	
+	2. Because He hath inclined His ear to me: and in my days I will call upon Him.
+	
+	3. The sorrows of death have compassed me: and the perils of hell have found me.
+	
+	4. I met with trouble and sorrow: and I called upon the name of the Lord.
+	
+	5. O Lord, deliver my soul, The Lord is merciful and just, and our God showeth mercy.
+	
+	6. The Lord is the keeper of the little ones: I was humbled, and He delivered me.
+	
+	7. Turn, O my soul, into thy rest: for the Lord hath been bountiful to thee.
+	
+	8. For He hath delivered my soul from death: my eyes from tears, my feet from falling.
+	
+	9. I will please the Lord: in the land of the living.
+	
+	10. Eternal rest, grant unto them, O Lord, and let perpetual light shine upon them. 
+}
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_placebo_domino}
+\textit{I will please the Lord in the land of the living.}
+
+\vspace{0.2cm}
+\hrule
+\vspace{0.2cm}
+
+%%
+
+\vspace{0.6cm}
+
+\textit{Woe is me, O Lord, that my sojourning is prolonged.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_heu_me}
+
+\section*{Psalm 119}
+
+\gresetinitiallines{0}
+\gregorioscore{intonation_psalm_119}
+
+\begin{latinenglishsection}
+\latinenglish{
+	2. Dómine, líbera ánimam meam a lábiis in\textbf{í}quis,~* et a lingua \textit{do}\textbf{ló}sa.
+
+	3. Quid detur tibi, aut quid apponátur \textbf{ti}bi~* ad linguam \textit{do}\textbf{ló}sam?
+	
+	4. Sagíttæ poténtis a\textbf{cú}tæ,~* cum carbónibus deso\textit{la}\textbf{tó}riis.
+	
+	5. Heu mihi! quia incolátus meus prolongátus est:~{\color{red}\GreDagger} habitávi cum habitántibus \textbf{Ce}dar:~* multum íncola fuit áni\textit{ma} \textbf{me}a.
+	
+	6. Cum his, qui odérunt pacem, eram pa\textbf{cí}ficus:~* cum loquébar illis, impugnábant \textit{me} \textbf{gra}tis.
+	
+	7. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lucea\textit{at} \textbf{e}is.
+}{
+	1. In my trouble I creid to the Lord, and He heard me.
+	
+	2. O Lord, deliver my soul from wicked lips, and a decietful tongue.
+	
+	3. What shall be given to thee, or what shall be added to thee, to a deceitful tongue?
+	
+	4. The sharp arrows of the mighty, with coals that lay waste.
+	
+	5. Woe is me, that my sojourning is prolonged! I have dwelt with the inhabitants of Cedar: my soul hath been long a sojourner.
+	
+	6. With them that hated peace I was peaceable: when I spoke to them, they fought against me without cause.
+	
+	7. Eternal rest, grant unto them, O Lord, and let perpetual light shine upon them. 
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_heu_me}
+\textit{Woe is me, O Lord, that my sojourning is prolonged.}
+
+\vspace{0.2cm}
+\hrule
+\vspace{0.2cm}
+
+%%
+
+\vspace{0.6cm}
+
+\textit{The Lord keepeth thee from all evil: may the Lord keep thy soul.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_dominus_custodit}
+
+\section*{Psalm 120}
+
+\gresetinitiallines{0}
+\gregorioscore{intonation_psalm_120}
+
+\begin{latinenglishsection}
+\latinenglish{
+	2. Auxílium meum a \textbf{Dó}mino,~* qui fecit cæ\textit{lum} \textit{et} \textbf{ter}ram.
+
+	3. Non det in commotiónem pedem \textbf{tu}um:~* neque dormítet \textit{qui} \textit{cus}\textbf{tó}dit te.
+	
+	4. Ecce, non dormitábit neque \textbf{dór}miet,~* qui cus\textit{tó}\textit{dit} \textbf{Is}raël.
+	
+	5. Dóminus custódit te, Dóminus protéctio \textbf{tu}a,~* super manum déx\textit{te}\textit{ram} \textbf{tu}am.
+	
+	6. Per diem sol non \textbf{u}ret te:~* neque lu\textit{na} \textit{per} \textbf{noc}tem.
+	
+	7. Dóminus custódit te ab omni \textbf{ma}lo:~* custódiat ánimam \textit{tu}\textit{am} \textbf{Dó}minus.
+	
+	8. Dóminus custódiat intróitum tuum, et éxitum \textbf{tu}um:~* ex hoc nunc, et us\textit{que} \textit{in} \textbf{sǽ}culum.
+	
+	9. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lu\textit{ceat} \textbf{e}is.
+}{
+	1. I have lifted up my eyes to the mountains, from whence help shall come to me.
+	
+	2. My help is from the Lord, who made heaven and earth.
+	
+	3. May He not suffer thy foot to slip: neither let Him that keepeth thee slumber.
+	
+	4. Behold, He that keepeth Israel shall neither slumber nor sleep.
+	
+	5. The Lord is thy keeper: the Lord is thy protection upon thy right hand.
+	
+	6. The sun shall not burn thee by day: nor the moon by night.
+	
+	7. The Lord keepeth thee from all evil: may the Lord keep thy soul.
+	
+	8. May the Lord guard thy coming in and thy going out from henceforth now and for ever.
+	
+	9. Eternal rest, grant unto them, O Lord, and let perpetual light shine upon them. 
+}
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_dominus_custodit}
+\textit{The Lord keepeth thee from all evil: may the Lord keep thy soul.}
+
+\vspace{0.2cm}
+\hrule
+\vspace{0.2cm}
+
+%%
+
+\vfill\pagebreak
+
+\textit{If Thou, O Lord, wilt mark iniquities, Lord, who shall stand it?}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_si_iniquitates}
+
+\section*{Psalm 129}
+
+\gresetinitiallines{0}
+\gregorioscore{intonation_psalm_129}
+
+\begin{latinenglishsection}
+\latinenglish{
+	2. Fiant aures tuæ inten\textbf{dén}tes:~* in vocem deprecati\textit{ó}\textit{nis} \textbf{me}æ.
+
+	3. Si iniquitátes observáveris, \textbf{Dó}mine:~* Dómine, quis \textit{sus}\textit{ti}\textbf{né}bit?
+	
+	4. Quia apud te propitiáti\textbf{o} est:~* et propter legem tuam sustínu\textit{i} \textit{te}, \textbf{Dó}mine.
+	
+	5. Sustínuit ánima mea in verbo \textbf{e}jus:~* sperávit ánima me\textit{a} \textit{in} \textbf{Dó}mino.
+	
+	6. A custódia matutína usque ad \textbf{noc}tem:~* speret Isra\textit{ël} \textit{in} \textbf{Dó}mino.
+	
+	7. Quia apud Dóminum miseri\textbf{cór}dia:~* et copiósa apud e\textit{um} \textit{red}\textbf{émp}tio.
+	
+	8. Et ipse rédimet \textbf{Is}raël:~* ex ómnibus iniquitá\textit{ti}\textit{bus} \textbf{e}jus.
+	
+	9. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lu\textit{ceat} \textbf{e}is.
+}{
+	1. Out of the depths I have cried unto Thee, O Lord: Lord, hear my voice.
+	
+	2. Let Thine ears be attentive to the voice of my supplication.
+	
+	3. If Thou, O Lord, wilt mark iniquities, Lord, who shall stand it?
+	
+	4. For with Thee there is merciful forgiveness: and by reason of Thy law I have waited for Thee, O Lord.
+	
+	5. My soul hath relied on His word: my soul hath hoped in the Lord.
+	
+	6. From the morning watch even until night, let Israel hope in the Lord.
+	
+	7. For with the Lord there is mercy: and with Him plentiful redemption.
+	
+	8. And He shall redeem Israel from all his iniquities.
+	
+	9. Eternal rest, grant unto them, O Lord, and let perpetual light shine upon them. 
+}
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_si_iniquitates}
+\textit{If Thou, O Lord, wilt mark iniquities, Lord, who shall stand it?}
+
+\vspace{0.2cm}
+\hrule
+\vspace{0.2cm}
+
+%%
+
+\vfill\pagebreak
+
+\textit{Despise not, O Lord, the works of Thy hands.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_opera_manuum}
+
+\section*{Psalm 137}
+
+\gresetinitiallines{0}
+\gregorioscore{intonation_psalm_137}
+
+\begin{latinenglishsection}
+\latinenglish{
+	2. In conspéctu Angelórum psallam \textbf{ti}bi:~* adorábo ad templum sanctum tuum, et confitébor nómi\textit{ni} \textbf{tu}o.
+
+	3. Super misericórdia tua, et veritáte \textbf{tu}a:~* quóniam magnificásti super omne, nomen sanc\textit{tum} \textbf{tu}um.
+	
+	4. In quacúmque die invocávero te, ex\textbf{áu}di me:~* multiplicábis in ánima mea \textit{vir}\textbf{tú}tem.
+	
+	5. Confiteántur tibi, Dómine, omnes reges \textbf{ter}ræ:~* quia audiérunt ómnia verba o\textit{ris} \textbf{tu}i.
+	
+	6. Et cantent in viis \textbf{Dó}mini:~* quóniam magna est glóri\textit{a} \textbf{Dó}mini.
+	
+	7. Quóniam excélsus Dóminus, et humília \textbf{ré}spicit:~* et alta a longe \textit{co}\textbf{gnó}scit.
+	
+	8. Si ambulávero in médio tribulatiónis, vivificábis me:~{\color{red}\GreDagger} et super iram inimicórum meórum extendísti manum \textbf{tu}am,~* et salvum me fecit déxte\textit{ra} \textbf{tu}a.
+	
+	9. Dóminus retríbuet pro me:~{\color{red}\GreDagger} Dómine, misericórdia tua in \textbf{sǽ}culum:~* ópera mánuum tuárum ne \textit{de}\textbf{spí}cias.
+	
+	10. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua luce\textit{at} \textbf{e}is.
+}{
+	1. I will praise Thee, O Lord, with my whole heart: for Thou hast heard the words of my mouth.
+	
+	2. I will sing praise to Thee in the sight of the angels: I will worship towards Thy holy temple, and I will give glory to Thy name.
+	
+	3. For Thy mercy, and for Thy truth: for Thou hast magnified Thy holy name above all.
+	
+	4. In what day soever I shall call upon Thee, hear me: Thou wilt multiply strength in my soul.
+	
+	5. May all the kings of the earth give glory to Thee: for they have heard all the words of Thy mouth.
+	
+	6. And let them sing in the ways of the Lord: for great is the glory of the Lord.
+	
+	7. For the Lord is high, and looketh on the low: and the high He knoweth afar off.
+	
+	8. If I shall shall walk in the midst of tribulation, Thou wilt quicken me: and Thou hast stretched forth Thy hand against the wrath of my enemies: and Thy right hand hath saved me.
+	
+	9. The Lord will repay for me: Thy mercy, O Lord, endureth forever: O despise not the works of Thy hands.
+	
+	10. Eternal rest, grant unto them, O Lord, and let perpetual light shine upon them. 
+}
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_opera_manuum}
+\textit{Despise not, O Lord, the works of Thy hands.}
+
+\vspace{0.2cm}
+\hrule
+\vspace{0.2cm}
+
+%%
+
+\vfill\pagebreak
+
+{\color{red}\textit{The Officiant leads the following versicle:}}
+
+\gresetinitiallines{0}
+\gabcsnippet{(c3)<c><sp>V/</sp>.</c> Au(h)dí(h)vi(h) vo(h)cem(h) de(h) cæ(h)lo(h) di(h)cé(i')tem(h) mi(g.)hi.(g.) (::)}
+
+\gresetinitiallines{0}
+\gabcsnippet{(c3)<c><sp>R/</sp>.</c> Be(h)á(h)ti(h) mór(h)tu(h)i(h) qui(h) in(h) Dó(h)mi(h)no(h) mo(i')ri(h) ún(g.)tur.(g.) (::)}
+
+\vspace{0.25cm}
+{\color{red}\Vbar.} I heard a voice from heaven, saying to me. {\color{red}\Rbar.} Blessed are the dead who die in the Lord.
+
+%%
+
+\vspace{1cm}
+
+\textit{All that the Father giveth Me shall come to Me, and him that cometh to Me, I will not cast out.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_omne_quod}
+
+\section*{Magnificat - Luke 1:46}
+
+\gresetinitiallines{1}
+\gregorioscore{intonation_magnificat_7c}
+
+\begin{latinenglishsection}
+\latinenglish{
+	3. Quia respéxit humilitátem an\textbf{cíl}læ \textbf{su}æ:~* ecce enim ex hoc beátam me dicent omnes gene\textbf{ra}ti\textbf{ó}nes.
+	
+	4. Quia fecit mihi \textbf{ma}gna qui \textbf{pot}ens est:~* et sanctum \textbf{no}men \textbf{e}jus.
+	
+	5. Et misericórdia ejus a progénie \textbf{in} pro\textbf{gé}nies~* ti\textbf{mén}tibus \textbf{e}um.
+	
+	6. Fecit poténtiam in \textbf{brá}chio \textbf{su}o:~* dispérsit supérbos mente \textbf{cor}dis \textbf{su}i.
+	
+	7. Depósuit pot\textbf{én}tes de \textbf{se}de,~* et exal\textbf{tá}vit \textbf{hú}miles.
+	
+	8. Esuriéntes im\textbf{plé}vit \textbf{bo}nis:~* et dívites di\textbf{mí}sit in\textbf{á}nes.
+	
+	9. Suscépit Israël \textbf{pú}erum \textbf{su}um,~* recordátus miseri\textbf{cór}diæ \textbf{su}æ.
+	
+	10. Sicut locútus est ad \textbf{pa}tres \textbf{nos}tros,~* Abraham et sémini \textbf{e}jus in \textbf{sǽ}cula.
+	
+	11. Requiem æternam dona \textbf{e}is, \textbf{Do}mine~* Et lux perpetua luce\textbf{at} \textbf{e}is.
+}{
+	1. My soul doth magnify the Lord; and my spirit hath rejoiced in God my Saviour,
+	
+	2. For he hath regarded: the lowliness of his handmaiden. For behold from henceforth: all generations shall call me blessed.
+
+	3. For he that is mighty hath magnified me: and holy is His Name.
+
+	4. And his mercy is on them that fear him throughout all generations.
+	
+	5. He hath shewed strength with his arm: he hath scattered the proud in the imagination of their hearts.
+
+	6. He hath put down the mighty from their seat: and hath exalted the humble and meek.
+	
+	7. He hath filled the hungry with good things: and the rich he hath sent empty away.
+
+	8. He remembering his mercy hath holpen his servant Israel: As he promised to our forefathers, Abraham and his seed forever.
+	
+	9. Eternal rest, grant unto them, O Lord, and let perpetual light shine upon them. 
+}
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_omne_quod}
+\textit{All that the Father giveth Me shall come to Me, and him that cometh to Me, I will not cast out.}
+
+\vspace{0.2cm}
+\hrule
+\vspace{0.2cm}
+
+{\color{red}\textit{The following prayers are said kneeling:}}
+
+\begin{latinenglishsection} 
+\latinenglish{
+	Pater Noster, ... {\color{red}secreto}
+	
+	{\color{red}\Vbar.} Et ne nos ind\'{u}cas in tentati\'{o}nem.
+	
+	{\color{red}\Rbar.} Sed l\'{i}bera nos a malo.
+	
+	{\color{red}\Vbar.} A porta \'{i}nferi.
+	
+	{\color{red}\Rbar.} Erue, D\'{o}mine, \'{a}nimam eius (\'{a}nimas e\'{o}rum).
+	
+	{\color{red}\Vbar.} Requi\'{e}sca(n)t in pace.
+	
+	{\color{red}\Rbar.} Amen.
+	
+	{\color{red}\Vbar.} D\'{o}mine, ex\'{a}udi orati\'{o}nem meam.
+	
+	{\color{red}\Rbar.} Et clamor meus ad te v\'{e}niat.
+}{
+	Our Father, ... {\color{red}silent until}
+	
+	{\color{red}\Vbar.} And lead us not into temptation.
+	
+	{\color{red}\Rbar.} But deliver us from evil.
+	
+	{\color{red}\Vbar.} From the gates of hell.
+	
+	{\color{red}\Rbar.} Deliver their souls, O Lord.
+	
+	{\color{red}\Vbar.} May they rest in peace.
+	
+	{\color{red}\Rbar.} Amen.
+	
+	{\color{red}\Vbar.} O Lord, hear my prayer.
+	
+	{\color{red}\Rbar.} And let my cry come unto Thee.
+}
+\end{latinenglishsection}
+
+\begin{center}
+{\color{red}\textit{If a priest or deacon presides:}}
+\end{center}
+
+\begin{latinenglishsection} 
+\latinenglish{
+	{\color{red}\Vbar.} D\'{o}minus vob\'{i}scum.
+	
+	{\color{red}\Rbar.} Et cum spiritu tuo.
+	
+	Or\'{e}mus.
+}{
+	{\color{red}\Vbar.} The Lord be with you.
+	
+	{\color{red}\Rbar.} And with thy spirit.
+}
+\end{latinenglishsection}
+
+\begin{center}
+{\color{red}\textit{The appropriate Collect is said from the next page, followed by the rest on page 12.}}
+\end{center}
+
+\vfill\pagebreak
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section*{Proper Collects for the Dead}
+
+\subsection*{\color{red}Prayer on the Day of the Decease and Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Absolve, qu\'{\ae}sumus, D\'{o}mine, \'{a}nimam f\'{a}muli tui (f\'{a}mul\ae\ tu\ae) {\color{red}N.}, ut def\'{u}nctus (def\'{u}ncta) s\'{\ae}culo tibi vivat: et, qu\ae per fragilit\'{a}tem carnis hum\'{a}na\\ conversati\'{o}ne comm\'{i}sit, tu v\'{e}nia misericord\'{i}ssim\ae\\ piet\'{a}tis abst\'{e}rge. Per D\'{o}minum nostrum Jesum Christum F\'{i}lium tuum, qui tecum vivit et regnat in unit\'{a}te Sp\'{i}ritus Sancti, Deus, per \'{o}mnia s\'{\ae}cula s\ae cul\'{o}rum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Absolve, we beseech Thee, O lord, the soul of Thy servant {\color{red}N.}, that being dead to the world he (or she) may live to Thee; and whatever he (or she) has committed through human frailty, do Thou wipe away by the pardon of Thy most merciful goodness. Through Our Lord Jesus Christ, Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+{\color{red}\textit{The following prayer may also be used:}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, cui pr\'{o}prium est miser\'{e}ri semper et p\'{a}rcere, te s\'{u}pplices exor\'{a}mus pro \'{a}nima f\'{a}muli tui {\color{red}N.} (f\'{a}mul\ae\ tu\ae {\color{red}N.}), quam h\'{o}die de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti: ut non tradas eam in manus inim\'{i}mici, neque oblivisc\'{a}ris in finem, sed j\'{u}beas eam a sanctis Angelis s\'{u}scipi, et ad p\'{a}triam parad\'{i}si perd\'{u}ci; ut, quia in te sper\'{a}vit et cr\'{e}diditm non p\oe nas inf\'{e}rni sust\'{i}neatm sed g\'{a}udia \ae t\'{e}rna poss\'{i}deat. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, whose property it is always to have mercy and to spare, we humbly beseech Thee for the soul of Thy servant {\color{red}N.}, which today Thou hast taken out of this world: not to deliver it into the hands of the enemy, nor to forget it forever;but to command the holy angels to receive it, and to conduct it to the heavenly country; that since it has believed and hoped in Thee, it may not suffer the pains of hell, but possess eternal joys. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}Prayer for the Third, Seventh, or Thirtieth Day after Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Qu\ae sumus, D\'{o}mine, ut \'{a}nimam f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae\ tu\ae\ {\color{red}N.}), cujus depositi\'{o}nis diem t\'{e}rtium ({\color{red}vel} s\'{e}ptimum, {\color{red}vel} trig\'{e}simum) commemor\'{a}mus, sanct\'{o}rum atque elect'{o}rum tu\'{o}rum larg\'{i}ri dign\'{e}ris cons\'{o}rtium: et rorem miseric\'{o}rdi\ae tu\ae per\'{e}nnem inf\'{u}ndas. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Vouchsafe, we beseech Thee, O Lord, to admit the soul of Thy servant {\color{red}N.}, the third (seventh or thirtieth) day of whose burial we commemorate, into the fellowship of Thy saints and elect, and sprinkle upon it the perpetual dew of Thy mercy. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}Prayer on the Anniversary of Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, indulgenti\'{a}rum D\'{o}mine, da \'{a}nim\ae\ f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae\ tu\ae\ {\color{red}N.}, {\color{red}vel} anim\'{a}bus famul\'{o}rum\\ famalur\'{u}mque tu\'{a}rum), cujus (quorum) annivers\'{a}rium depositi\'{o}nis diem commemor\'{a}mus, refrig\'{e}rii sedem, qui\'{e}tis\\ beatit\'{u}dinem, et l\'{u}minis clarit\'{a}tem. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the Lord of mercy and pardon, grant to the soul of Thy servant {\color{red}N.} ({\color{red}or} servants), the anniversary of whose burial we commemorate, the place of refreshment, the blessedness of rest, and the brightness of light. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\subsection*{\color{red}For a Deceased Pope}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui inter summos sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} ineff\'{a}bili tua dispositi\'{o}ne connumer\'{a}ri volu\'{i}sti: pr\ae sta, qu\'{\ae}sumus; ut qui Unig\'{e}niti F\'{i}lii tui vices in terris ger\'{e}bat, sanct\'{o}rum tu\'{o}rum Pont\'{i}ficum cons\'{o}rtio perp'{e}tuo aggreg\'{e}tur. Per e\'{u}ndem D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant {\color{red}N.} was raised to the dignity of the sovereign pontiff, grant, we beseech Thee, that he may be admitted to the eternal society of Thy holy pontiffs in heaven. Through the same Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\subsection*{\color{red}For a Deceased Bishop}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui inter apost\'{o}licos sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} (f\'{a}mulos tuos {\color{red}N.} et {\color{red}N.}) pontific\'{a}lis fec\'{i}sti dignit\'{a}te vig\'{e}re: pr\ae sta, qu\'{\ae}sumus, ut e\'{o}rum quoque perp\'{e}tuo aggreg\'{e}(n)tur cons\'{o}rtio. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant(s) {\color{red}N.} (and {\color{red}N.}) was raised to the dignity of a bishop, and honored with the apostolic functions, grant, we beseech Thee, that he (they) may be admitted to the eternal society of Thy apostles in heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Bishop, say:}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Ep\'{i}scopum Cardin\'{a}lem pontific\'{a}li fec\'{i}sti dign\'{i}tate vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.} was raised to the dignity of Cardinal Bishop.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Priest or Cardinal-Deacon who was also a Bishop, say:}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Presb\'{y}terum ({\color{red}vel} Diaconum)\\ Cardin\'{a}lem pontific\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Priest.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Priest who was not a Bishop, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Presb\'{y}terum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Priest.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{For a Cardinal-Deacon who was a priest, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	f\'{a}mulum tuum {\color{red}N.} Di\'{a}conum Cardin\'{a}lem sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re.
+}{
+	O God, by whose favor Thy servant {\color{red}N.}. was raised to the dignity of Cardinal Deacon.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\vfill\pagebreak
+
+\subsection*{\color{red}For a Deceased Priest}
+\begin{latinenglishsection}
+\latinenglish{
+	Deua, qui inter apost\'{o}licus sacerd\'{o}tes f\'{a}mulum tuum {\color{red}N.} (f\'{a}mulus tuos {\color{red}N.} et {\color{red}N.}) sacerdot\'{a}li fec\'{i}sti dignit\'{a}te vig\'{e}re: pr\ae sta, qu\'{\ae}sumus, ut e\'{o}rum quoque perp\'{e}tuo aggreg\'{e}(n)tur cons\'{o}rtio. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, by whose favor Thy servant(s) {\color{red}N.}. (and {\color{red}N.}) was raised to the priestly dignity, grant, we beseech Thee, that he (they) may be admitted to the eternal society of Thy apostles in heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{Another Collect for a Deceased Priest}}
+\begin{latinenglishsection}
+\latinenglish{
+	Pr\ae sta, qu\'{\ae}sumus D\'{o}mine, ut \'{a}nima f\'{a}muli tui {\color{red}N.} sacerd\'{o}tis, quem, in hoc s\'{\ae}culo commor\'{a}ntem, sacris mun\'{e}ribus decor\'{a}sti, in c\ae l\'{e}sti sede glori\'{o}sa semper exs\'{u}ltet. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Grant, we beseech Thee, O Lord, that the soul of Thy servant {\color{red}N.}, priest, which whilst he was sojourning in this world, Thou didst adorn with the graces proper to the sacred ministry, may evermore rejoice in the glory of heaven. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\begin{center}
+\par\noindent\rule{0.5\textwidth}{0.4pt}
+\end{center}
+
+\subsection*{\color{red}For a Deceased Man}
+\begin{latinenglishsection}
+\latinenglish{
+	Inclina, D\'{o}mine, aurem tuam ad preces nostras, quibus miseric\'{o}rdiam tuam s\'{u}pplices deprec\'{a}mur: ut \'{a}nimam f\'{a}muli tui {\color{red}N.}, quam de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti, in pacis ac lucis regi\'{o}ne const\'{i}tuas, et sanct\'{o}rum tu\'{o}rum j\'{u}beas esse cons\'{o}rtem. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Incline, O Lord, Thine ear to our prayers, in which we humbly beseech Thy mercy; that Thou wouldst place the soul of Thy servant {\color{red}N.}, which Thou hast caused to depart from this world, in the region of peace and light; and unite him in the fellowship of Thy saints. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For a Deceased Woman}
+\begin{latinenglishsection}
+\latinenglish{
+	Qu\ae sumus, D\'{o}mine, pro tua piet\'{a}te miser\'{e}re \'{a}nim\ae\\ f\'{a}mul\ae tu\ae\ {\color{red}N.}: et a cont\'{a}giis mortalit\'{a}tis ex\'{u}tam, in \ae t\'{e}rn\ae\ salvati\'{o}nis partem resti\'{i}tue. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	We beseech Thee, O Lord, of Thy goodness to have mercy on the soul of Thy handmaid {\color{red}N.}; do Thou, who hast freed her from the perils of this mortal life, vouchsafe to number her for evermore among the saved. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\subsection*{\color{red}For Friends and Benefactors}
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, v\'{e}ni\ae\ larg\'{i}tor et hum\'{a}n\ae\ sal\'{u}tis am\'{a}tor: qu\'{\ae}sumus clem\'{e}ntiam tuam; ut nostr\ae\ congregati\'{o}nis fratres, prop\'{i}nquos, et benefact\'{o}res, qui ex hoc s\'{\ae}culo transi\'{e}runt, Beat\'{a} Mar\'{i}a semper V\'{i}rgine interced\'{e}nte cum \'{o}mnibus sanctis tuis, ad perp\'{e}tu\ae\ beatit\'{u}dinis cons\'{o}rtium perven\'{i}re conc\'{e}das. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the giver of pardon and lover of human salvation, we beseech Thy clemency to grant that the brethren, relations, and benefactors of our congregation who are departed frmo this world may, by the intercession of the Blessed Mary, ever virgin, and of all Thy saints, attain to the fellowship of eternal beatitude. Through the same Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For a Father and Mother Deceased}
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, qui nos patrem et matrem honor\'{a}re pr\ae\ cep\'{i}sti: miser\'{e}re clem\'{e}nter anim\'{a}bus patris et matris me\ae, eor\'{u}mque peccata dim\'{i}tte; meque eos in \ae t\'{e}rn\ae\ clarit\'{a}tis g\'{a}udio fac vid\'{e}re. Per D\'{o}minum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, who hast commanded us to honor our father and mother, have compassion, in Thy mercy, on the souls of my father and mother, and forgive them their sins, and grant that we may meet in the joy of eternal bliss. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If the office is for several, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	anim\'{a}bus par\'{e}ntum nostr\'{o}rum {\color{red}and} nosque {\color{red}instead of} meque.
+}{
+	on the souls of our parents, {\color{red}and} we {\color{red}instead of} I.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If it is for the father only, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	\'{a}nim\ae\ patris mei, {\color{red}or} nostri.
+}{
+	the soul of my ({\color{red}or} our) father.
+}
+\end{latinenglishsection}
+
+\subsubsection*{\color{red}\textit{If it is for the mother only, say:}}
+\begin{latinenglishsection}
+\latinenglish{
+	\'{a}nim\ae\ patris me\ae, {\color{red}or} nostr\ae.
+}{
+	the soul of my ({\color{red}or} our) mother.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}For all the Faithful Departed}
+\begin{latinenglishsection}
+\latinenglish{
+	Fidelium, Deus, \'{o}mnium C\'{o}nditor et Red\'{e}mptor, anim\'{a}bus famul\'{o}rum famular\'{u}mque tu\'{a}rum\\ remissi\'{o}nem cunct\'{o}rum tr\'{i}bue peccat\'{o}rum: ut\\ indulg\'{e}ntiam, quam semper optav\'{e}runt, piis\\ supplicati\'{o}nibus consequ\'{a}ntur. Qui vivis et regnas cum Deo Patre, in unit\'{a}te Sp\'{i}ritus Sancti Deus, per \'{o}mnia s\'{\ae}cula s\'{\ae}cula s\ae cul\'{o}rum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, the Creator and Redeemer of all the faithful departed, give to the souls of Thy servants, men and women, the remission of all their sins, that by pious supplications they may obtain the pardon which they have always desired. Who livest and reignest with God the Father in the unity of the Holy Spirit, forever and ever.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+
+\begin{center}
+{\color{red}\textit{After the collect, there is always said (always in the plural):}}
+\end{center}
+
+\begin{latinenglishsection}
+\latinenglish{
+	{\color{red}\Vbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine.
+	
+	{\color{red}\Rbar.} Et lux perp\'{e}tua l\'{u}ceat eis.
+}{
+	{\color{red}\Vbar.} Eternal rest grant unto them, O Lord.
+	
+	{\color{red}\Rbar.} And let perpetual light shine upon them.
+}
+\end{latinenglishsection}
+
+\gresetinitiallines{0}
+\gregorioscore{requiescant_in_pace}
+\vspace{0.25cm}
+{\color{red}\Vbar.} May they rest in peace. {\color{red}\Rbar.} Amen.
 
 \end{document}
